@@ -26,7 +26,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Properties;
 
-import org.apache.commons.lang.NullArgumentException;
 import org.apache.gora.dynamodb.query.DynamoDBKey;
 import org.apache.gora.dynamodb.query.DynamoDBQuery;
 import org.apache.gora.dynamodb.query.DynamoDBResult;
@@ -91,7 +90,6 @@ public class DynamoDBNativeStore<K, T extends Persistent> extends
     } catch (GoraException e) {
       throw e ; // If it is a GoraException we assume it is already logged
     } catch (Exception e) {
-      LOG.error(e.getMessage(), e);
       throw new GoraException(e);
     }
     return deletes.size();
@@ -116,7 +114,6 @@ public class DynamoDBNativeStore<K, T extends Persistent> extends
             (DynamoDBScanExpression) dynamoDBQuery.getQueryExpression());
       return new DynamoDBResult<K, T>(this, query, objList);
     } catch (Exception e) {
-      LOG.error(e.getMessage(), e);
       throw new GoraException(e);
     }
   }
@@ -160,7 +157,6 @@ public class DynamoDBNativeStore<K, T extends Persistent> extends
     } catch (GoraException e) {
       throw e;
     } catch (Exception e) {
-      LOG.error(e.getMessage(), e);
       throw new GoraException(e);
     }
   }
@@ -194,11 +190,14 @@ public class DynamoDBNativeStore<K, T extends Persistent> extends
   public T newPersistent() throws GoraException {
     T obj = null;
     try {
-      obj = persistentClass.newInstance();
+      obj = persistentClass.getDeclaredConstructor().newInstance();
     } catch (InstantiationException e) {
       LOG.error("Error instantiating " + persistentClass.getCanonicalName(), e);
       throw new GoraException(e);
     } catch (IllegalAccessException e) {
+      LOG.error("Error instantiating " + persistentClass.getCanonicalName(),e );
+      throw new GoraException(e);
+    } catch (NoSuchMethodException | InvocationTargetException | IllegalArgumentException | SecurityException e) {
       LOG.error("Error instantiating " + persistentClass.getCanonicalName(),e );
       throw new GoraException(e);
     }
@@ -228,7 +227,6 @@ public class DynamoDBNativeStore<K, T extends Persistent> extends
       } else
         throw new GoraException("No HashKey found in Key nor in Object.");
     } catch (Exception e) {
-      LOG.error(e.getMessage(), e);
       throw new GoraException(e);
     }
   }
@@ -274,7 +272,6 @@ public class DynamoDBNativeStore<K, T extends Persistent> extends
       mapper.delete(object);
       return true;
     } catch (Exception e) {
-      LOG.error(e.getMessage(), e);
       throw new GoraException(e);
     }
   }
@@ -374,7 +371,6 @@ public class DynamoDBNativeStore<K, T extends Persistent> extends
             dynamoDBStoreHandler.getTableProvisionedThroughput(tableName));
       }
     } catch (Exception e) {
-      LOG.error(e.getMessage(), e);
       throw new GoraException(e);
     }
   }
