@@ -96,9 +96,8 @@ public class InfinispanClient<K, T extends PersistentBase> implements Configurab
 
   public synchronized void createSchema() throws GoraException {
     try {
-      Support.registerSchema(cacheManager, persistentClass.newInstance().getSchema());
+      Support.registerSchema(cacheManager, persistentClass.getConstructor().newInstance().getSchema());
     } catch (Exception e) {
-      LOG.error(e.getMessage(), e);
       throw new GoraException(e);
     }
   }
@@ -113,7 +112,6 @@ public class InfinispanClient<K, T extends PersistentBase> implements Configurab
       cache.clear();
       cacheExists = false;
     } catch (Exception e) {
-      LOG.error(e.getMessage(), e);
       throw new GoraException(e);
     }
   }
